# ping-pong

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/engine/: utils.h
app/engine/audio/: audio_events_manager.h  audio_system.h
app/engine/core/: application_state.h  canvas.h  engine.h  igame.h  input_system.h  loop.h  utils.h  window_system.h
app/engine/ecs/: colliders.h  ecs.h  physcis_system.h  render_system.h  rigidbody.h  transform.h
app/engine/nodes/: node.h  node_ecs.h  node_ui.h
app/engine/render/: camera.cpp  camera.h  command_buffer.h  commands.h  icanvas.h  igpu_mesh.h  igraphic_fabric.h  irender_backend.h  ishader.h
app/engine/render/backends/opengl/: opengl_canvas.h  opengl_fabric.h  opengl_mesh.h  opengl_render.h  opengl_shader.h  opengl_texture.h
app/engine/resources/: assetsdb.h  audio_pipe.h  data_desc.h  data_pipe.h  mesh_desc.h  mesh_pipe.h  resource_pipe.h  shader_desc.h  shader_pipe.h  texture_desc.h  texture_pipe.h  ui_image_pipe.h
app/engine/ui/: label.h  layout.h  ui_canvas.cpp  ui_canvas.h  ui_element.h
app/game/: ai_params.h  ball.h  ball_system.h  game.h  game_presenter_system.h  game_scene.h  game_state.h  game_ui_system.h  input_actions.h  player.h  player_ai_system.h  player_controll_system.h  render_system.h  renderable.h  transform.h  utils.h
app/include/game/: game.h  game_scene.h  input_actions.h  utils.h
app/include/game/components/: ball.h  player.h
app/include/game/systems/: ball_system.h  game_presenter_system.h  game_ui_system.h  player_ai_system.h  player_controll_system.h
app/src/: game.cpp  game_scene.cpp
app/src/systems/: ball_system.cpp  game_presenter_system.cpp  game_ui_system.cpp  player_ai_system.cpp  player_control_system.cpp
assets/: default-shader.shader  quad.mesh
docs/: ReadMe.md
engine/: CMakeLists.txt
engine/include/engine/: utils.h
engine/include/engine/audio/: audio.h  audio_events_manager.h  audio_system.h
engine/include/engine/core/: engine.h  event_bus.h  input_system.h  loop.h  time.h  window_system.h
engine/include/engine/ecs/: colliders.h  physcis_system.h  render_system.h  renderable.h  rigidbody.h  transform.h
engine/include/engine/nodes/: node.h  node_ecs.h  node_ui.h
engine/include/engine/render/: camera.h  command_buffer.h  commands.h  igraphic_factory.h  itexture.h
engine/include/engine/render/backends/opengl/: opengl_canvas.h  opengl_fabric.h  opengl_factory.h  opengl_mesh.h  opengl_render.h  opengl_shader.h  opengl_texture.h
engine/include/engine/resources/: assetsdb.h  audio_pipe.h  mesh_desc.h  mesh_pipe.h  resource_create_exception.h  resource_pipe.h  shader_pipe.h  texture_pipe.h  ui_image.h  ui_image_pipe.h
engine/include/engine/ui/: label.h  layout.h  ui_element.h
engine/src/core/: input_system.cpp  loop.cpp  window_system.cpp
engine/src/ecs/: physics_system.cpp  render_system.cpp
engine/src/node/: node.cpp  node_ecs.cpp  node_ui.cpp
engine/src/render/: camera.cpp  command_buffer.cpp
engine/src/render/backend/opengl/: opengl_canvas.cpp  opengl_fabric.cpp  opengl_factory.cpp  opengl_mesh.cpp  opengl_render.cpp  opengl_shader.cpp  opengl_texture.cpp
engine/src/resources/: audio_pipe.cpp  mesh_pipe.cpp  shader_pipe.cpp  texture_pipe.cpp  ui_image_pipe.cpp
engine/src/ui/: label.cpp  layout.cpp  ui_canvas.cpp
